# thesis-ucv-FHE

./: .gitmodules  GEMINI.md  MissingRef.txt  books.bib  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  intro.tex  portada.tex  thesis.tex
doc/: .latexmkrc  LINKS.txt  books.bib  chapter2.tex  chapter3.tex  portada.tex
presentation/: .gitignore  INDEX.md  beamerthemeUCV.sty  main.tex
presentation/slides/: 01_intro.tex  02_fundamentos.tex  03_ckks_depth.tex  04_nn_fundamentals.tex  05_nn_over_ckks.tex  06_proposed_library.tex
sdk/: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  README.md  pyproject.toml  tox.ini
sdk/bench/: .gitignore  NOTES.md  __main__.py  analysis.ipynb  bench.py  config.toml  envs.toml  instance.md  paths.py
sdk/bench/cnn/: analysis.ipynb  model.py  sdk_model.py
sdk/bench/cnn/processes/: profile_sdk.py  run_cml.py  run_orion.py  run_pytorch.py  run_sdk.py  train.py
sdk/bench/mlp/: analysis.ipynb  model.py  sdk_model.py
sdk/bench/mlp/processes/: profile_sdk.py  run_cml.py  run_orion.py  run_pytorch.py  run_sdk.py  train.py
sdk/bench/playground/: bench.py  model.py  profile_sdk.csv  profile_sdk.py  results.csv  run_cml.py  run_orion.py  run_pytorch.py  run_sdk.py  sdk_model.py  train.py
sdk/bench/playground/processes/: profile_sdk.py  run_cml.py  run_orion.py  run_pytorch.py  run_sdk.py  train.py
sdk/bench/shared/: config.py  envs.py  io.py  measure.py  metrics.py  runner.py  training.py
sdk/docs/: API.md  BOOTSTRAPPING.md  CONFIG.md  CONV2D.md  ERRORS.md  GUIDELINES.md  INTRO.md  MATMUL.md  ORION.md  PROJECT_STRUCTURE.md  RELU_APPROXIMATION.md  RESEARCH_SUMMARY.md  VALIDATIONS.md
sdk/examples/: bootstrapping.py  matmul_compare.py  me.py  ops_compare.py  simple_nn.py  square.py
sdk/examples/classifier/: concrete_bench.py  network.py  plaintext_bench.py  sdk_bench.py  tenseal_bench.py
sdk/notebooks/: conv_classification_benchmark.ipynb  fc_classification_benchmark.ipynb  shallow_cnn.ipynb  shallow_mlp.ipynb
sdk/notebooks/classification/: sdk_conv.py
sdk/notebooks/classification/helpers/: data.py  networks.py  training.py
sdk/notebooks/regression/: sdk_deep.py  sdk_shallow.py
sdk/notebooks/regression/helpers/: __init__.py  data.py  networks.py  training.py
sdk/notebooks/regression/helpers/trained/: deep.pt  shallow.pt
sdk/scripts/: benchmarks.sh  build.sh  clean.sh  debug_backend.sh  install_system_deps.sh  prepare_bench.sh  publish.sh  release.sh  run_example.sh  run_tests.sh  setup_env.sh
sdk/src/_fideslib_backend/: CMakeLists.txt  bindings.cpp
sdk/src/_heongpu_backend/: CMakeLists.txt  bindings.cu
sdk/src/api/: __init__.py  _validate.py  ciphertext.py  config.py  context.py  input.py  sequential.py  tensor.py
sdk/src/api/functions/: __init__.py  activations.py  relu.py  square.py
sdk/src/api/layers/: __init__.py  base.py  conv2d.py  linear.py
sdk/src/backend/: CMakeLists.txt  bind_context.cu  bind_crypto.cu  bindings.cu
sdk/src/backend/bindings/: CMakeLists.txt  bind_context.cu  bind_data.cu  bind_enums.cu  bind_keys.cu  bind_operator.cu  bindings.cu
sdk/src/backend/core/: plaintext_matrix.hpp
sdk/src/core/: __init__.py  enums.py  layer.py  plaintext.py
sdk/src/core/utils/: __init__.py  convert.py  validate.py
sdk/src/fhe_ml/: __init__.py  sequential.py
sdk/src/fhe_ml/backend/bindings/: CMakeLists.txt  bind_context.cu  bind_crypto.cu  bind_data.cu  bind_keys.cu
sdk/src/fhe_ml/ckks/: __init__.py  config.py  context.py
sdk/src/fhe_ml/ckks/containers/: __init__.py  ciphertext.py  plaintext.py  tensor.py
sdk/src/fhe_ml/functions/: __init__.py
sdk/src/fhe_ml/layers/: __init__.py  base.py  conv2d.py  input.py  linear.py  relu.py  square.py
sdk/src/fhe_ml/utils/: __init__.py  enums.py  errors.py  validate.py
sdk/src/fhe_sdk/: __init__.py  ciphertext.py  context.py  enums.py  nn.py  plaintext.py  tensor.py
sdk/tests/: conftest.py  test_ciphertext.py  test_context.py  test_conv2d.py  test_errors.py  test_linear.py  test_plaintext.py  test_plaintext_tensor.py  test_relu.py  test_relu_polynomial.py  test_sequential.py  test_tensor.py
