[build-system]
requires = ["scikit-build-core>=0.10", "pybind11", "numpy"]
build-backend = "scikit-build_core.build"

[project]
name = "fhe-sdk"
version = "0.1.0"
description = "Python SDK for GPU-accelerated CKKS homomorphic encryption inference"
readme = "docs/INTRO.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Rcontre360" }]
keywords = [
    "homomorphic-encryption",
    "CKKS",
    "FHE",
    "privacy-preserving-ml",
    "GPU",
    "CUDA",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "black>=24.0",
    "hypothesis>=6.100",
]

[tool.scikit-build]
cmake.version = ">=3.25"
ninja.make-fallback = true
install.components = ["python_modules"]

[tool.scikit-build.cmake.define]
BUILD_PYTHON_BINDINGS = "ON"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/fhe_sdk"]
omit = ["tests/*"]
